<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.elad.newbabyapp.LoginPage"
    android:background="#66ff4081">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:id="@+id/nameText"
        android:hint="@string/name_text"
        android:gravity="center"
        android:selectAllOnFocus="false"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="15dp"
        android:layout_centerVertical="true"
        android:ellipsize="start"
        android:background="@drawable/EditTextStyle"
        android:textSize="24sp"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/nameText"
        android:id="@+id/lastDateText"
        android:hint="@string/date_text"
        android:gravity="center"
        android:elevation="1dp"
        android:ellipsize="start"
        android:background="@drawable/EditTextStyle"
        android:textSize="24sp"
        tools:ignore="UnusedAttribute" />

    <Button
        android:text="@string/accpet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:id="@+id/acceptButton"
        android:textStyle="bold"
        android:background="@drawable/ButtonStyle"/>

    <TextView
        android:text="@string/date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lastDateText"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="19dp"
        android:id="@+id/dateView"
        android:textDirection="ltr"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/white" />

    <TextView
        android:text="@string/name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:id="@+id/nameView"
        android:textDirection="ltr"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="right"
        android:textColor="@android:color/white"
        tools:ignore="RtlHardcoded" />
</RelativeLayout>
